// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiTypeMap /> tests Renders ok with minimal UI 1`] = `
<div>
  <form>
    <div
      class="group withoutSpacing"
    >
      <div
        class="bp3-form-group"
        style="flex-grow: 1; margin-bottom: 0px;"
      >
        <label
          class="bp3-label"
          for="test"
        >
          <div
            class="formLabel"
          >
            Test
            <div
              class="bp3-popover-wrapper typeSelectorWrapper"
            >
              <div
                class="bp3-popover-target typeSelector"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span
                      class="bp3-icon StyledProps--main icon fixed"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
            data-testid="add-test"
            style="padding: 0px;"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              plusAdd
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<MultiTypeMap /> tests Should render properly 1`] = `
<div>
  <form>
    <div
      class="group withoutSpacing"
    >
      <div
        class="bp3-form-group"
        style="flex-grow: 1; margin-bottom: 0px;"
      >
        <label
          class="bp3-label"
          for="test"
        >
          <div
            class="formLabel"
          >
            Test
            <div
              class="bp3-popover-wrapper typeSelectorWrapper"
            >
              <div
                class="bp3-popover-target typeSelector"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span
                      class="bp3-icon StyledProps--main icon fixed"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="group withoutAligning"
          >
            <div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
              >
                keyLabel
              </p>
              <div
                class="bp3-form-group"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="test[0].key"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
              >
                valueLabel
              </p>
              <div
                class="group withoutAligning withoutSpacing"
              >
                <div
                  class="bp3-form-group"
                >
                  
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    >
                      <div
                        class="bp3-input-group MultiTypeInput--input"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="test[0].value"
                          type="text"
                          value=""
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  data-testid="remove-test-[0]"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="main-trash"
                  >
                    <svg
                      height="20"
                      viewBox="0 0 16 20"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
            data-testid="add-test"
            style="padding: 0px;"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              plusAdd
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
